--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "nodejs-starter",
   "version": "1.0.0",
   "description": "Nodejs starter with javascript",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dhinesh Sattia",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
