--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^5.9.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "jest": "^25.2.3",
