--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redis": "^3.0.2"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "jest": "^25.2.3",
     "nodemon": "^2.0.2"
   }
