--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "mongoose": "^5.9.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "redis": "^3.0.2"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
